<resources>
    <bool name="is_rtl">false</bool>
    <string name="app_name">bit.Rocket</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score</string>
    <string name="high_score">High Score</string>
    <string name="score_board">Score Board</string>
    <string name="main_menu">Main Menu</string>
    <string name="play">Play</string>
    <string name="shop">Shop</string>
    <string name="rate_us">Rate Us</string>
    <string name="galaxy_1">Galaxy 1</string>
    <string name="moon">Moon</string>
    <string name="earth">Earth</string>
    <string name="galaxy_3">Galaxy 3</string>
    <string name="ocean">Ocean</string>
    <string name="ice">Ice</string>
    <string name="galaxy_2">Galaxy 2</string>
    <string name="desert">Desert</string>
    <string name="forest">Forest</string>
    <string name="cosmetic_shop">Cosmetic Shop</string>
    <string name="back">Back</string>
    <string name="quit_game">Quit Game?</string>
    <string name="total_coins">Total Coins</string>
    <string name="choose_level">Play again</string>
    <string name="victory">Victory!</string>
    <string name="next_level">Next Level</string>
    <string name="gems_earned">Gems Earned</string>
    <string name="hell">Hell</string>
    <string name="final_galaxy">Final Galaxy</string>
    <string name="valid_name">Enter valid name</string>
    <string name="is_in_top_10">\" is in Top 10!\"</string>
    <string name="locked">Locked</string>
    <string name="total_gems">Total Gems</string>
    <string name="gems">Gems</string>
    <string name="hey_you_ve_entered_our_top_10">Hey! You\'ve made it in the Top 10!</string>
    <string name="def">Default</string>
    <string name="rare">Rare</string>
    <string name="legendary">Legendary</string>
    <string name="common">Common</string>
    <string name="premium">Premium</string>
    <string name="equipped">Equipped</string>
    <string name="owned">Owned</string>
    <string name="unlock_first">You need to unlock it first</string>
    <string name="rank">RANK</string>
    <string name="score_tv">SCORE</string>
    <string name="name_tv">NAME</string>
    <string name="high_scores_tv">HIGH SCORES</string>
    <string name="sumbit">Sumbit</string>
    <string name="enter_name">Enter name</string>
</resources>
