<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lvl_2_block"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars_pxl_png">

    <TextView
        style="@style/high_score"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/galaxy_2" />

    <LinearLayout
        android:id="@+id/row_one_layout_b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/lvl_3_btn"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:src="@drawable/desert_300" />

        <TextView
            android:id="@+id/lvl_3_tv"
            style="@style/reg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/desert" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_two_layout_b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_one_layout_b2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lvl_4_tv"
            style="@style/reg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forest" />

        <ImageView
            android:id="@+id/lvl_4_btn"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:src="@drawable/forest_300" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prev_btn_block_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="280dp"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/arrow_left_50" />

        <ImageButton
            android:id="@+id/next_btn_block_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/arrow_right_50" />


    </LinearLayout>

</RelativeLayout>